# ExpensePal

./: .env.example  .gitignore  CHANGELOG.md  pyproject.toml
expense_pal/: api.py  auth.py  categories.py  cli.py  config.py  scanner.py  tui.py  web_review.py
expense_pal/prompts/: receipt_extraction.md  receipt_extraction.py
logs/: 20260220_192942_prompt.txt
